--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head><title>Login</title></head>
 <body>
-    <h2>Login</h2>
-    <form method="POST">
-        <input name="username" placeholder="Username" required><br>
-        <input name="password" placeholder="Password" type="password" required><br>
-        <button type="submit">Login</button>
-    </form>
-    <p>New user? <a href="/register">Register here</a></p>
+  <h2>Login (create 1 of 2 accounts)</h2>
+  <form method="POST">
+    <input name="name" placeholder="Name" required /><br/>
+    <input name="password" placeholder="Password" type="password" required /><br/>
+    <button type="submit">Login / Register</button>
+  </form>
 </body>
 </html>
